--- a/chrome-extension/manifest.json
+++ b/chrome-extension/manifest.json
@@ -9,7 +9,12 @@
     "scripting"
   ],
   "action": {
-    "default_popup": "popup.html"
+    "default_popup": "popup.html",
+    "default_icon": {
+      "16": "icons/apple-touch-icon.png",
+      "48": "icons/apple-touch-icon.png",
+      "128": "icons/apple-touch-icon.png"
+    }
   },
   "content_scripts": [
     {
@@ -21,5 +26,10 @@
   ],
   "background": {
     "service_worker": "background.js"
+  },
+  "icons": {
+    "16": "icons/apple-touch-icon.png",
+    "48": "icons/apple-touch-icon.png",
+    "128": "icons/apple-touch-icon.png"
   }
 }
